<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expence_appname"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"
            android:paddingTop="2dp"
            android:layout_weight="12"
            android:background="#FF6200EE"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/action_bar_app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:focusable="true" />

        <ImageView
            android:id="@+id/balance_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/Empty_textview"
            android:src="@drawable/ic_baseline_account_balance_wallet_24"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/balance_value"
            android:layout_marginBottom="4dp"
            android:layout_weight="6"
            android:textSize="18sp"
            android:text="@string/amount_value"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>