<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#000000"
    android:layout_margin="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_amount"
                android:text="@string/amount_text"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_message"
                android:text="@string/message_text"
                android:paddingLeft="24dp"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="30dp"

            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:src="@drawable/ic_baseline_delete_24" />

    </LinearLayout>

</androidx.cardview.widget.CardView>